--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ env:
   global:
     - TEST_RUNNER_URI=/tests/run.cfm?reporter=text
   matrix:
-    - CFENGINE=lucee@5
+    - CFENGINE=lucee@5.3
     - CFENGINE=adobe@11
+    - CFENGINE=adobe@2016
+    - CFENGINE=adobe@2018
 before_install:
 - git clone --depth 1 https://github.com/foundeo/cfmatrix.git cfmatrix
 install:
