--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   global:
     - TEST_RUNNER_URI=/tests/run.cfm?reporter=text
   matrix:
-    - CFENGINE=lucee@5.3
+    - CFENGINE=lucee@^5.2
     - CFENGINE=adobe@11
     - CFENGINE=adobe@2016
     - CFENGINE=adobe@2018
